# frac-tui-rs

./: Cargo.toml  LICENSE  Makefile  README.md
docker/: .dockerignore  Dockerfile  docker-compose.yaml
src/: color.rs  hooks.rs  main.rs  render.rs  ui.rs  utils.rs
